# rmq_tools

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: build_and_release.yml
RmqToolsWeb/: RmqToolsWeb.slnx
RmqToolsWeb/RmqToolsWeb/: Api.cs  ApiSerialization.cs  Dtos.cs  Program.cs  RmqToolsWeb.csproj  WebsocketApi.cs  _Imports.razor
RmqToolsWeb/RmqToolsWeb/Components/: EditMessageDialog.razor  ExportFilteredLinesDialog.razor  Highlighter.razor  SendWithDelayDialog.razor
RmqToolsWeb/RmqToolsWeb/Dtos/: Types.cs
RmqToolsWeb/RmqToolsWeb/Layout/: MainLayout.razor
RmqToolsWeb/RmqToolsWeb/Pages/: Home.razor  Queue.razor  Queue.razor.cs
RmqToolsWeb/RmqToolsWeb/Properties/: launchSettings.json
RmqToolsWeb/RmqToolsWeb/wwwroot/: index.html  styles.css
src/: api.rs  args.rs  check_version.rs  database.rs  dtos.rs  main.rs  rabbitmq.rs  rmq_background.rs  types.rs
src/api/: api_error.rs
