[package]
name = "rmq_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
rabbitmq_http_client = { version = "0.66", default-features = false, features = ["async", "native-tls"] }
clap = { version = "4.5", features = ["derive"] }
url = " 2.5"
axum = { version = "0.8.6", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"]}
anyhow = "1.0.100"
axum-macros = "0.5.0"
serde = "1.0.228"
rusqlite = "0.37.0"
tower-http = {version = "0.6.6", features = ["fs", "cors"]}
serde_json="1.0.145"
thiserror = "2.0.17"
